--- a/assets/template/layout.haml
+++ b/assets/template/layout.haml
@@ -6,4 +6,5 @@
     %link{ rel: "stylesheet", href: "/assets/deck.css" }
   %body
     = yield
+    %script{ src: "https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"}
     %script{ src: "/assets/deck.js" }
