--- a/assets/template/layout.haml
+++ b/assets/template/layout.haml
@@ -1,4 +1,4 @@
-/ You shouldn't need to edit this file.
+-# You shouldn't need to edit this file.
 !!! 5
 %html{ lang: "en" }
   %head
@@ -6,6 +6,7 @@
     %title Penguin
     %link{ rel: "stylesheet", href: "/assets/deck.css" }
   %body
-    = yield
+    .container
+      = yield
     %script{ src: "https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"}
     %script{ src: "/assets/deck.js" }
