Style and text tweaks.

--- a/assets/template/deck.haml
+++ b/assets/template/deck.haml
@@ -1,7 +1,9 @@
-.slide
+.slide.centered
   %h1 Penguin
 
   %h2 A tool for making presentations.
+
+  %p Press the right arrow to continue.
 
 .slide
   %p Penguin is:
@@ -9,14 +11,14 @@
   %ol
     %li Simple
     %li Flexible
-    %li Easy
+    %li Attractive
 
 .slide
   %p Source code looks great!
 
   %pre
     %code
-      :plain
+      :preserve
         (function () {
           var awesome = function (thing) {
             console.log(thing + "is awesome!");
@@ -29,6 +31,6 @@
   %p Make a presentation with:
 
   %ul
-    %li.step HTML or Haml.
-    %li.step CSS or Sass.
-    %li.step JavaScript or CoffeeScript.
+    %li.step Haml
+    %li.step Sass
+    %li.step CoffeeScript
